networking/service-mesh/backend-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
spec:
  selector:
    matchLabels:
      app: backend
      version: "1"
  template:
    metadata:
      labels:
        app: backend
        version: "1"
    spec:
      containers:
      - name: container1
        image: ghcr.io/learnk8s/app:1.0.0
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8080
