networking/service-mesh/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  labels:
    app: backend
    version: "1"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: backend
    version: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v2
  labels:
    app: backend
    version: "2"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: backend
    version: "2"
